# Bio-bot

./: .envtemplate  LICENSE  README.md  admin.py  config.py  funny.py  main.py  pyproject.toml  servers.py  weatherAPI.py  workout.py
cogs/: admin.py  fun.py  funny.py  servers.py  weatherAPI.py  workout.py
